dinoco_tests/tests/dinoco/ui/fail/type_safe_insert_wrong_model.stderr
error[E0308]: mismatched types
 --> tests/dinoco/ui/fail/type_safe_insert_wrong_model.rs:9:42
  |
9 |     let _ = insert_into::<User>().values(Team { id: "team-1".to_string(), name: "Platform".to_string() });
  |                                   ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `User`, found `Team`
  |                                   |
  |                                   arguments to this method are incorrect
  |
help: the return type of this call is `Team` due to the type of the argument passed
 --> tests/dinoco/ui/fail/type_safe_insert_wrong_model.rs:9:13
  |
9 |     let _ = insert_into::<User>().values(Team { id: "team-1".to_string(), name: "Platform".to_string() });
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------------------------------------------------------------^
  |                                          |
  |                                          this argument influences the return type of `values`
note: method defined here
 --> $WORKSPACE/dinoco/src/methods/insert_into.rs
  |
  |     pub fn values(mut self, item: M) -> Self {
  |            ^^^^^^
